--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "axios-mock-adapter": "^1.18.2",
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "react": "^16.13.1",
@@ -55,5 +56,8 @@
     "redux-saga": "^1.1.3",
     "styled-components": "^5.1.1",
     "yup": "^0.29.1"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4"
   }
 }
